# mlx-train-perf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.superpowers/sdd/: progress.md
_artifacts/bench_train_step_flash/: train_step_mlx-community__Qwen3-8B-4bit_seq2048_ours.json  train_step_mlx-community__Qwen3-8B-4bit_seq2048_stock.json  train_step_mlx-community__Qwen3-8B-4bit_seq8192_ours.json  train_step_mlx-community__Qwen3-8B-4bit_seq8192_stock.json
_artifacts/calib_050/: qwen3-8b-4bit.config.json  refit_manifest.json
_artifacts/calib_050/flash_n10240/: train_step_mlx-community__Qwen3-8B-4bit_seq10240_attn-flash_ours.json  train_step_mlx-community__Qwen3-8B-4bit_seq10240_attn-flash_stock.json
_artifacts/calib_050/flash_n12288/: train_step_mlx-community__Qwen3-8B-4bit_seq12288_attn-flash_ours.json  train_step_mlx-community__Qwen3-8B-4bit_seq12288_attn-flash_stock.json
_artifacts/calib_050/flash_n16384/: train_step_mlx-community__Qwen3-8B-4bit_seq16384_attn-flash_ours.json  train_step_mlx-community__Qwen3-8B-4bit_seq16384_attn-flash_stock.json
_artifacts/packed_bench_050/: packed_train_mlx-community__Llama-3.2-3B-Instruct-4bit_pack4096_packed.json  packed_train_mlx-community__Llama-3.2-3B-Instruct-4bit_pack4096_stock.json  packed_train_mlx-community__Qwen3-8B-4bit_pack4096_packed.json  packed_train_mlx-community__Qwen3-8B-4bit_pack4096_stock.json
_artifacts/packed_dkv/: dkv_n4096_alpaca.json  dkv_n4096_single.json  dkv_n4096_two_seg.json  dkv_n8192_alpaca.json  dkv_n8192_single.json  dkv_n8192_two_seg.json
community-benchmarks/: README.md  apple-m1-max-32gb-2026-07-13.json
docs/papers/: fused-linear-cross-entropy-apple-gpus.md  how-mlx-packs-metal-command-buffers.md  when-the-bottleneck-moved.md
docs/papers/diagrams/: bottleneck-migration-evidence-flow.puml  command-buffer-packing-sequence.puml  fused-linear-ce-dataflow.puml
scripts/: aggregate_community.py  assert_tag_version.py  bench_attention_op.py  bench_backward_ladder.py  bench_loss_layer.py  bench_packed_dkv.py  bench_packed_training.py  bench_quant_thresholds.py  bench_train_step.py  fit_calibration.py  gate_packed_attention.py  ground_truth_atomic_outputs.py  northstar_context_sweep.py  prep_alpaca.py  probe_command_buffer_packing.py
src/mlx_train_perf/: __init__.py  _compat.py  cli.py  contribute.py  errors.py
src/mlx_train_perf/adapters/: mlx_lm.py
src/mlx_train_perf/attention/: __init__.py  api.py  reference.py  segments.py  wrapper.py
src/mlx_train_perf/attention/kernel/: __init__.py  dispatch.py  launch.py  source.py
src/mlx_train_perf/bench/: artifacts.py  runner.py  worker.py
src/mlx_train_perf/core/: chunked.py  guards.py  loss.py  naive.py
src/mlx_train_perf/core/kernel/: dispatch.py  launch.py  source.py
src/mlx_train_perf/data/: packing.py
src/mlx_train_perf/devtools/: regpressure.py
src/mlx_train_perf/plan/: calibration.py  calibration_data.json  estimate.py  inverse.py
tests/: _attention_wrapper_gc_child.py  _composition_gc_child.py  conftest.py  test_adapter.py  test_adapter_packed.py  test_aggregate_community.py  test_assert_tag_version.py  test_attention_api.py  test_attention_composition.py  test_attention_kernel_bwd.py  test_attention_kernel_dispatch.py  test_attention_kernel_fwd.py  test_attention_launch_plan.py  test_attention_reference.py  test_attention_segments.py  test_attention_wrapper.py  test_attention_wrapper_compile.py  test_bench_attention_op.py  test_bench_backward_ladder.py  test_bench_loss_layer.py  test_bench_packed_dkv.py  test_bench_packed_training.py  test_bench_resume.py  test_bench_train_step.py  test_chunked.py  test_cli.py  test_compat.py  test_contribute.py  test_devtools.py  test_fit_calibration.py  test_ground_truth_script.py  test_guards.py  test_kernel_backward_parity.py  test_kernel_dispatch.py  test_kernel_guard.py  test_kernel_launch_calibration.py  test_kernel_parity.py  test_kernel_quant_parity.py  test_kernel_quant_validation.py  test_kernel_source.py  (+11 more)
