[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mlx-train-perf"
dynamic = ["version"]
description = "Fused, logit-free linear-cross-entropy loss, RAM-fit planner, and benchmark harness for MLX fine-tuning on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Denis Ineshin", email = "denis.ineshin@gmail.com" }]
dependencies = ["mlx>=0.31.2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# transformers>=5.13 breaks `import mlx_lm` outright: mlx_lm/tokenizer_utils.py:505 calls
# AutoTokenizer.register("NewlineTokenizer", ...) with a string class name, and
# transformers 5.13's auto_factory.py:680 requires an actual class object there
# (AttributeError: 'str' object has no attribute '__module__'). Verified clean on
# 5.0.0/5.4.0/5.8.0/5.11.0/5.12.0; verified broken on 5.13.0.
mlx-lm = ["mlx-lm==0.31.3", "transformers>=5.0,<5.13"]
probe = ["pyobjc-framework-Metal"]

[project.scripts]
mlx-train-perf = "mlx_train_perf.cli:main"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8", "pytest-cov", "hypothesis", "ruff", "mypy", "basedpyright",
    # transformers>=5.13 breaks `import mlx_lm` (see the mlx-lm extra above for the
    # verified-broken/verified-clean version detail); pinned here too since dev installs
    # both groups.
    "mlx-lm==0.31.3", "transformers>=5.0,<5.13", "pyobjc-framework-Metal",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM", "ARG", "PTH", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Verbatim-ported MSL kernel body (mlx-train-perf-spike/kernel_v2e.py) — line length is
# inherent to the source text; reformatting would break the byte-for-byte port fidelity
# the parity cross-check (task-7-report.md) depends on.
"src/mlx_train_perf/core/kernel/source.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["mlx_lm.*", "Metal"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "metal: needs a Metal GPU + JIT (collection-gated: --run-metal)",
    "smoke: loads a real model (collection-gated: --run-smoke)",
    "benchmark: timing runs (collection-gated: --run-benchmark)",
    "network: touches the network (collection-gated: --run-network)",
]

[tool.coverage.report]
fail_under = 85
